--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.3",
     "audit": "0.0.6",
+    "json-server": "^0.14.2",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.1",
